tests/ui/rust-2024/prelude-migration/future-poll-async-block.e2021.stderr
error: trait method `poll` will become ambiguous in Rust 2024
  --> $DIR/future-poll-async-block.rs:13:5
   |
LL |     core::pin::pin!(async {}).poll(&mut context());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: disambiguate the associated function: `Meow::poll(&core::pin::pin!(async {}), &mut context())`
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/prelude.html>
note: the lint level is defined here
  --> $DIR/future-poll-async-block.rs:7:9
   |
LL | #![deny(rust_2024_prelude_collisions)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

